// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`messages.tsx snapshots > empty inbox — headline, filter-less, first-run EmptyState 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <LinearGradient
    colors={
      [
        "#FFFFFF",
        "#EEF4FC",
      ]
    }
    end={
      {
        "x": 0.5,
        "y": 1,
      }
    }
    start={
      {
        "x": 0.5,
        "y": 0,
      }
    }
    style={{}}
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignSelf": "center",
          "borderRadius": 130,
          "height": 260,
          "opacity": 0.14,
          "position": "absolute",
          "top": -190,
          "width": 260,
        },
        {
          "backgroundColor": "#8FD9B4",
        },
      ]
    }
  />
  <SafeAreaView
    edges={
      [
        "top",
      ]
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Fraunces_600SemiBold",
              "fontSize": 27,
              "letterSpacing": -0.3,
              "lineHeight": 31.049999999999997,
            },
            {
              "color": "#14201B",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
              "textAlign": "center",
            },
          ]
        }
      >
        messages:title
      </Text>
      <TouchableOpacity
        accessibilityLabel="messages:searchAria"
        accessibilityRole="button"
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            {
              "borderRadius": 9999,
              "borderWidth": 1,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
            {
              "elevation": 1,
            },
            {
              "shadowColor": "#14201B",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="search-outline"
          size={20}
        />
      </TouchableOpacity>
    </View>
    <SectionList>
      <View
        style={
          {
            "alignItems": "center",
            "paddingHorizontal": 20,
            "paddingTop": 32,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 90,
                "height": 180,
                "opacity": 0.5,
                "position": "absolute",
                "top": 0,
                "width": 180,
              },
              {
                "backgroundColor": "#8FD9B4",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 48,
                "height": 96,
                "justifyContent": "center",
                "marginBottom": 16,
                "width": 96,
              },
              {
                "backgroundColor": "#E4EDFB",
              },
            ]
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="chatbubbles-outline"
            size={32}
          />
        </View>
        <Text
          style={
            [
              {
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 28.799999999999997,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "marginBottom": 4,
                "textAlign": "center",
              },
            ]
          }
        >
          messages:emptyHero.title
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "marginBottom": 16,
                "textAlign": "center",
              },
            ]
          }
        >
          messages:emptyHero.description
        </Text>
        <Pressable
          accessibilityLabel="messages:emptyHero.cta"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "disabled": false,
            }
          }
          disabled={false}
          onPress={[Function]}
          style={[Function]}
        >
          <Text
            style={
              [
                {
                  "fontWeight": "600",
                },
                {
                  "fontSize": 16,
                },
                {
                  "color": "#0D1512",
                },
              ]
            }
          >
            messages:emptyHero.cta
          </Text>
        </Pressable>
      </View>
    </SectionList>
  </SafeAreaView>
</View>
`;

exports[`messages.tsx snapshots > error — full-screen retry EmptyState 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <LinearGradient
    colors={
      [
        "#FFFFFF",
        "#EEF4FC",
      ]
    }
    end={
      {
        "x": 0.5,
        "y": 1,
      }
    }
    start={
      {
        "x": 0.5,
        "y": 0,
      }
    }
    style={{}}
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignSelf": "center",
          "borderRadius": 130,
          "height": 260,
          "opacity": 0.14,
          "position": "absolute",
          "top": -190,
          "width": 260,
        },
        {
          "backgroundColor": "#8FD9B4",
        },
      ]
    }
  />
  <SafeAreaView
    edges={
      [
        "top",
      ]
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Fraunces_600SemiBold",
              "fontSize": 27,
              "letterSpacing": -0.3,
              "lineHeight": 31.049999999999997,
            },
            {
              "color": "#14201B",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
              "textAlign": "center",
            },
          ]
        }
      >
        messages:title
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
    </View>
    <View
      accessibilityRole="text"
      accessible={true}
      style={
        {
          "alignItems": "center",
          "gap": 8,
          "padding": 20,
        }
      }
    >
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="cloud-offline-outline"
          size={32}
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 28.799999999999997,
            },
            {
              "color": "#26333A",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        messages:error.title
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            {
              "color": "#7A8288",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "marginBottom": 4,
            },
          ]
        }
      >
        messages:error.description
      </Text>
      <Pressable
        accessibilityLabel="common:actions.retry"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "disabled": false,
          }
        }
        disabled={false}
        onPress={[Function]}
        style={[Function]}
      >
        <Text
          style={
            [
              {
                "fontWeight": "600",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#2E3B42",
              },
            ]
          }
        >
          common:actions.retry
        </Text>
      </Pressable>
    </View>
  </SafeAreaView>
</View>
`;

exports[`messages.tsx snapshots > loading — headline over conversation-row skeletons 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <LinearGradient
    colors={
      [
        "#FFFFFF",
        "#EEF4FC",
      ]
    }
    end={
      {
        "x": 0.5,
        "y": 1,
      }
    }
    start={
      {
        "x": 0.5,
        "y": 0,
      }
    }
    style={{}}
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignSelf": "center",
          "borderRadius": 130,
          "height": 260,
          "opacity": 0.14,
          "position": "absolute",
          "top": -190,
          "width": 260,
        },
        {
          "backgroundColor": "#8FD9B4",
        },
      ]
    }
  />
  <SafeAreaView
    edges={
      [
        "top",
      ]
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Fraunces_600SemiBold",
              "fontSize": 27,
              "letterSpacing": -0.3,
              "lineHeight": 31.049999999999997,
            },
            {
              "color": "#14201B",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
              "textAlign": "center",
            },
          ]
        }
      >
        messages:title
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
    </View>
    <View
      style={
        {
          "gap": 8,
          "padding": 16,
        }
      }
    >
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#EAE7DC",
            },
            {
              "borderRadius": 16,
              "height": 92,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": "100%",
            },
            undefined,
          ]
        }
      />
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#EAE7DC",
            },
            {
              "borderRadius": 16,
              "height": 92,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": "100%",
            },
            undefined,
          ]
        }
      />
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#EAE7DC",
            },
            {
              "borderRadius": 16,
              "height": 92,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": "100%",
            },
            undefined,
          ]
        }
      />
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#EAE7DC",
            },
            {
              "borderRadius": 16,
              "height": 92,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": "100%",
            },
            undefined,
          ]
        }
      />
    </View>
  </SafeAreaView>
</View>
`;

exports[`messages.tsx snapshots > populated — filter chips over Aujourd'hui/Hier day sections 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <LinearGradient
    colors={
      [
        "#FFFFFF",
        "#EEF4FC",
      ]
    }
    end={
      {
        "x": 0.5,
        "y": 1,
      }
    }
    start={
      {
        "x": 0.5,
        "y": 0,
      }
    }
    style={{}}
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "alignSelf": "center",
          "borderRadius": 130,
          "height": 260,
          "opacity": 0.14,
          "position": "absolute",
          "top": -190,
          "width": 260,
        },
        {
          "backgroundColor": "#8FD9B4",
        },
      ]
    }
  />
  <SafeAreaView
    edges={
      [
        "top",
      ]
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Fraunces_600SemiBold",
              "fontSize": 27,
              "letterSpacing": -0.3,
              "lineHeight": 31.049999999999997,
            },
            {
              "color": "#14201B",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
              "textAlign": "center",
            },
          ]
        }
      >
        messages:title
      </Text>
      <TouchableOpacity
        accessibilityLabel="messages:searchAria"
        accessibilityRole="button"
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            {
              "borderRadius": 9999,
              "borderWidth": 1,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
            {
              "elevation": 1,
            },
            {
              "shadowColor": "#14201B",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="search-outline"
          size={20}
        />
      </TouchableOpacity>
    </View>
    <ScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "paddingBottom": 12,
          "paddingHorizontal": 16,
        }
      }
      horizontal={true}
      showsHorizontalScrollIndicator={false}
      style={
        {
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <TouchableOpacity
        accessibilityLabel="booking:filters.all"
        accessibilityRole="button"
        accessibilityState={
          {
            "selected": true,
          }
        }
        activeOpacity={0.85}
        onPress={[Function]}
        style={
          {
            "alignSelf": "flex-start",
          }
        }
      >
        <LinearGradient
          colors={
            [
              "#1E2F27",
              "#0A100D",
            ]
          }
          end={
            {
              "x": 0.9,
              "y": 1,
            }
          }
          start={
            {
              "x": 0.1,
              "y": 0,
            }
          }
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "borderRadius": 9999,
                "justifyContent": "center",
                "paddingHorizontal": 16,
                "paddingVertical": 10,
              },
              {
                "elevation": 1,
              },
              {
                "shadowColor": "#14201B",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 21,
                },
                {
                  "color": "#FFFFFF",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "600",
                },
              ]
            }
          >
            booking:filters.all
          </Text>
        </LinearGradient>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="booking:filters.upcoming"
        accessibilityRole="button"
        accessibilityState={
          {
            "selected": false,
          }
        }
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 9999,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 10,
            },
            {
              "backgroundColor": "#E4EDFB",
              "borderColor": "#E4EDFB",
              "borderWidth": 1,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "fontWeight": "600",
              },
            ]
          }
        >
          booking:filters.upcoming
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="booking:filters.active"
        accessibilityRole="button"
        accessibilityState={
          {
            "selected": false,
          }
        }
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 9999,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 10,
            },
            {
              "backgroundColor": "#E4EDFB",
              "borderColor": "#E4EDFB",
              "borderWidth": 1,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "fontWeight": "600",
              },
            ]
          }
        >
          booking:filters.active
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="booking:filters.past"
        accessibilityRole="button"
        accessibilityState={
          {
            "selected": false,
          }
        }
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 9999,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 10,
            },
            {
              "backgroundColor": "#E4EDFB",
              "borderColor": "#E4EDFB",
              "borderWidth": 1,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "fontWeight": "600",
              },
            ]
          }
        >
          booking:filters.past
        </Text>
      </TouchableOpacity>
    </ScrollView>
    <SectionList>
      <View
        style={
          [
            {
              "paddingTop": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "letterSpacing": 0.5,
                "paddingBottom": 4,
                "textTransform": "uppercase",
              },
            ]
          }
        >
          common:time.today
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="messages:conversationWith Amine Ben Salah, Tunis → Sousse"
        accessibilityRole="button"
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
            {
              "elevation": 1,
            },
            {
              "shadowColor": "#14201B",
            },
            false,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 8,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 4,
                  "height": 8,
                  "width": 8,
                },
                {
                  "backgroundColor": "#2E9E6C",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityLabel="Photo de Amine Ben Salah"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontWeight": "600",
                },
                {
                  "color": "#14201B",
                  "fontSize": 19,
                },
              ]
            }
          >
            AB
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "gap": 2,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "flexShrink": 1,
                      "fontWeight": "600",
                    },
                    {
                      "fontWeight": "800",
                    },
                  ],
                ]
              }
            >
              Amine Ben Salah
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#2E9E6C",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "fontWeight": "700",
                  },
                ]
              }
            >
              09:41
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 4,
                    "paddingHorizontal": 4,
                    "paddingVertical": 1,
                  },
                  {
                    "backgroundColor": "#E4EDFB",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 18,
                    },
                    {
                      "color": "#5B6572",
                      "textAlign": undefined,
                      "writingDirection": "ltr",
                    },
                    {
                      "fontSize": 10,
                    },
                  ]
                }
              >
                booking:driver
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              •
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#5B6572",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
            >
              Tunis → Sousse (common:time.tomorrow)
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "600",
                },
              ]
            }
          >
            Je passe vous prendre devant la station.
          </Text>
        </View>
      </TouchableOpacity>
      <View
        style={
          [
            {
              "paddingTop": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "letterSpacing": 0.5,
                "paddingBottom": 4,
                "textTransform": "uppercase",
              },
            ]
          }
        >
          common:time.yesterday
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="messages:conversationWith Salma Trabelsi, Tunis → Hammamet"
        accessibilityRole="button"
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
            {
              "elevation": 1,
            },
            {
              "shadowColor": "#14201B",
            },
            {
              "opacity": 0.55,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 8,
            }
          }
        />
        <View
          accessibilityLabel="Photo de Salma Trabelsi"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontWeight": "600",
                },
                {
                  "color": "#14201B",
                  "fontSize": 19,
                },
              ]
            }
          >
            ST
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "gap": 2,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "flexShrink": 1,
                      "fontWeight": "600",
                    },
                    false,
                  ],
                ]
              }
            >
              Salma Trabelsi
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  false,
                ]
              }
            >
              Hier
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 4,
                    "paddingHorizontal": 4,
                    "paddingVertical": 1,
                  },
                  {
                    "backgroundColor": "#E4EDFB",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 18,
                    },
                    {
                      "color": "#5B6572",
                      "textAlign": undefined,
                      "writingDirection": "ltr",
                    },
                    {
                      "fontSize": 10,
                    },
                  ]
                }
              >
                booking:driver
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8B93A3",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              •
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#5B6572",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
            >
              Tunis → Hammamet
            </Text>
            <Ionicons
              accessibilityElementsHidden={true}
              color="#2E9E6C"
              importantForAccessibility="no-hide-descendants"
              name="checkmark-circle"
              size={16}
            />
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#8B93A3",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                false,
              ]
            }
          >
            messages:conversationClosed
          </Text>
        </View>
      </TouchableOpacity>
    </SectionList>
  </SafeAreaView>
</View>
`;
